UtahLiveDataTest/src/objects/AmendmentServiceArea__c.object
<CustomObject>
    <description>[Business] Object used to store all the requests for the Service Area Amendments ,(Need to revisit)</description>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmendmentRequest__c</fullName>
        <label>Change Request</label>
        <referenceTo>AmendmentRequest__c</referenceTo>
        <relationshipName>AmendmentServiceAreas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>DirectAmount__c + IndirectAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsModified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProposedAmount__c</fullName>
        <formula>Amount__c +  Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipName>AmendmentServiceAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Amendment Project Area</label>
    <nameField>
        <displayFormat>PSA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Project Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>